# jupyter_server

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  COPYING.md  Capstone Project  LICENSE  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  appveyor.yml  codecov.yml  conftest.py  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  setup.cfg  setup.py  setupbase.py
.github/workflows/: check-release.yml  codeql-analysis.yml  downstream.yml  enforce-label.yml  integration-tests.yml  main.yml  prep-release.yml  publish-release.yml  python-linux.yml  python-macos.yml  python-tests.yml  python-windows.yml  trigger_precommit.yml
docs/: Makefile  README.md  autogen_config.py  doc-requirements.txt  environment.yml
docs/source/: changelog.rst  conf.py  config_overview.rst  frontends.rst  index.rst  migrate_from_notebook.rst  public_server.rst  security.rst
examples/authorization/: README.md  jupyter_nbclassic_readonly_config.py  jupyter_nbclassic_rw_config.py  jupyter_temporary_config.py
examples/client_eventlog/: setup.py
examples/client_eventlog_example/: setup.cfg
examples/client_eventlog_example/client_eventlog_example/: __init__.py
examples/client_eventlog_example/client_eventlog_example/schemas/: schema_yaml.yaml
examples/client_eventlog_example/tests/: conftest.py
examples/jlab-kernel-provider-k8s/: Dockerfile  Makefile  README.md  jlab.yaml
examples/simple/: Makefile  README.md  conftest.py  jupyter_server_config.py  jupyter_simple_ext11_config.py  jupyter_simple_ext1_config.py  jupyter_simple_ext2_config.py  package.json  pyproject.toml  pytest.ini  setup.py  webpack.config.js
examples/simple/etc/jupyter/jupyter_server_config.d/: server_simple.json  simple_ext.json  simple_ext1.json  simple_ext11.json  simple_ext2.json
examples/simple/jupyter_server_simple/: __init__.py  application.py  handler.py  handler_template.py
examples/simple/jupyter_server_simple/static/: test.html
examples/simple/jupyter_server_simple/templates/: error.html  server_simple.html
examples/simple/jupyter_simple_ext/: __init__.py  application.py  handlers.py
examples/simple/jupyter_simple_ext/static/: bundle.js  index.js  test.html  tsconfig.tsbuildinfo
examples/simple/jupyter_simple_ext/templates/: error.html  main.html
examples/simple/simple_ext1/: __init__.py  __main__.py  application.py  handlers.py
examples/simple/simple_ext1/static/: bundle.js  home.html  index.d.ts  index.js  test.html  tsconfig.tsbuildinfo
examples/simple/simple_ext1/templates/: error.html  page1.html  simple1.html  typescript.html
examples/simple/simple_ext11/: __init__.py  __main__.py  application.py
examples/simple/simple_ext2/: __init__.py  __main__.py  application.py  handlers.py
examples/simple/simple_ext2/static/: test.html
examples/simple/simple_ext2/templates/: index.html  page.html  simple_ext2.html
examples/simple/src/: index.ts  tsconfig.json
examples/simple/tests/: test_handlers.py
jupyter_server/: __init__.py  __main__.py  _sysinfo.py  _tz.py  _version.py  config_manager.py  conftest.py  debug.py  encoding.py  extensions.py  extensions_base.py  firewall.py  log.py  metrics.py  migrate.py  pytest_plugin.py  serverapp.py  specvalidator.py  traittypes.py  transutils.py  utils.py
jupyter_server/auth/: __init__.py  __main__.py  authorizer.py  decorator.py  identity.py  login.py  logout.py  security.py  utils.py
jupyter_server/base/: call_context.py  handlers.py  websocket.py  zmqhandlers.py
jupyter_server/benchmarks/: fileidmanager_benchmark.py
jupyter_server/bundler/: __main__.py  bundlerextensions.py  handlers.py  tarball_bundler.py  zip_bundler.py
jupyter_server/edit/: handlers.py
jupyter_server/extension/: __init__.py  application.py  config.py  handler.py  manager.py  serverextension.py  utils.py
jupyter_server/files/: handlers.py
jupyter_server/gateway/: connections.py  gateway_client.py  handlers.py  managers.py  spottokenrenewer.py
jupyter_server/i18n/: __init__.py  notebook.pot
jupyter_server/kernelspecs/: handlers.py
jupyter_server/nbconvert/: handlers.py
jupyter_server/prometheus/: __init__.py  log_functions.py  metrics.py  server.py
jupyter_server/services/: shutdown.py
jupyter_server/sychronizer/: remote_kernel_table.py  synchronizer.py
jupyter_server/templates/: apidocs.html  login.html  logout.html  main.html  page.html
jupyter_server/terminal/: __init__.py  api_handlers.py  handlers.py  terminalmanager.py
jupyter_server/tests/: conftest.py  launchserver.py  test_config_manager.py  test_eventlog.py  test_extensions.py  test_files.py  test_firewall.py  test_gateway.py  test_i18n.py  test_paths.py  test_serialize.py  test_serverapp.py  test_spec_validation.py  test_specvalidator.py  test_stateful_terminal.py  test_terminal.py  test_traittypes.py  test_utils.py  test_view.py  utils.py
jupyter_server/torndsession/: __init__.py  compat.py  driver.py  memorysession.py  session.py  sessionhandler.py
jupyter_server/view/: handlers.py
notebook/: serverextensions.py
pytest_plugin/: README.md  pytest_jupyter_server.py  setup.cfg  setup.py
scripts/: jupyter-bundlerextension  jupyter-extension  jupyter-server
tests/: conftest.py  test_config_manager.py  test_contextvars.py  test_eventlog.py  test_extensions.py  test_files.py  test_gateway.py  test_handlers.py  test_log.py  test_metrics.py  test_paths.py  test_serialize.py  test_serverapp.py  test_terminal.py  test_traittypes.py  test_utils.py  test_version.py  test_view.py  utils.py
tests/auth/: test_authorizer.py  test_identity.py  test_legacy_login.py  test_login.py  test_security.py
tests/base/: test_allow_origin_pat.py  test_call_context.py  test_handlers.py  test_websocket.py
tests/extension/: conftest.py  test_api.py  test_app.py  test_config.py  test_entrypoint.py  test_handler.py  test_launch.py  test_manager.py  test_serverextension.py  test_utils.py
tools/: secure_server.py
(+252 files in other folders)
