[metadata]
name = jupyter_server
version = attr: jupyter_server.__version__
description = The backend—i.e. core services, APIs, and REST endpoints—to Jupyter web applications.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = COPYING.md
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://jupyter-server.readthedocs.io
platforms = Linux, Mac OS X, Windows
keywords = ipython, jupyter
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://jupyter-server.readthedocs.io
    Funding = https://numfocus.org/donate
    Source = https://github.com/jupyter-server/jupyter_server
    Tracker = https://github.com/jupyter-server/jupyter_server/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    anyio>=3.1.0,<4
    argon2-cffi
    ipython_genutils
    jinja2
    jupyter_client>=6.1.1
    jupyter_core>=4.6.0
    nbconvert
    nbformat
    packaging
    prometheus_client
    pyzmq>=17
    Send2Trash
    terminado>=0.8.3
    tornado>=6.1.0
    traitlets>=5
    websocket-client

[options.extras_require]
test =
    coverage
    ipykernel
    pytest-console-scripts
    pytest-cov
    pytest-mock
    pytest-tornasync
    pytest>=6.0
    requests

[options.entry_points]
console_scripts =
    jupyter-server = jupyter_server.serverapp:main

[options.packages.find]
exclude = ['docs*', 'examples*']

[flake8]
ignore = E, C, W, F403, F811, F841, E402, I100, I101, D400
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
