[metadata]
name = jupyter_server
version = attr: jupyter_server.__version__
description = The backend—i.e. core services, APIs, and REST endpoints—to Jupyter web applications.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = COPYING.md
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://jupyter.org
platforms = Linux, Mac OS X, Windows
keywords = ipython, jupyter
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    jinja2
    tornado>=6.1.0
    pyzmq>=17
    argon2-cffi
    ipython_genutils
    traitlets>=5
    jupyter_core>=4.6.0
    jupyter_client>=6.1.1
    nbformat
    nbconvert
    Send2Trash
    terminado>=0.8.3
    prometheus_client
    anyio>=3.1.0,<4
    websocket-client
    packaging
    pywinpty(<2);os_name=='nt'

[options.extras_require]
test =
    coverage
    pytest>=6.0
    pytest-cov
    pytest-mock
    pytest-timeout
    requests
    pytest-tornasync
    pytest-console-scripts
    ipykernel
    # NOTE: we cannot auto install examples/simple here because of:
    # https://github.com/pypa/pip/issues/6658

[options.entry_points]
console_scripts =
    jupyter-server = jupyter_server.serverapp:main

[options.packages.find]
exclude = ['docs*', 'examples*']

[flake8]
ignore = E, C, W, F403, F811, F841, E402, I100, I101, D400
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
