[metadata]
name = jupyter_server
version = attr: jupyter_server.__version__
description = The backend—i.e. core services, APIs, and REST endpoints—to Jupyter web applications.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = COPYING.md
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://jupyter-server.readthedocs.io
platforms = Linux, Mac OS X, Windows
keywords = ipython, jupyter
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://jupyter-server.readthedocs.io
    Funding = https://numfocus.org/donate
    Source = https://github.com/jupyter-server/jupyter_server
    Tracker = https://github.com/jupyter-server/jupyter_server/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    "" = "jupyter_server"
python_requires = >=3.7
install_requires =
    anyio>=3.1.0,<4
    argon2-cffi
    jinja2
    jupyter_client>=6.1.12
    jupyter_core>=4.7.0
    nbconvert>=6.4.4
    nbformat>=5.2.0
    packaging
    prometheus_client
    pywinpty;os_name=='nt'
    pyzmq>=17
    Send2Trash
    terminado>=0.8.3
    tornado>=6.1.0
    traitlets>=5.1
    websocket-client

[options.extras_require]
test =
    coverage
    ipykernel
    pre-commit
    pytest-console-scripts
    pytest-cov
    pytest-mock
    pytest-timeout
    pytest-tornasync
    pytest>=7.0
    requests
    requests

[options.entry_points]
console_scripts =
    jupyter-server = jupyter_server.serverapp:main

[options.packages.find]
exclude =
    docs.*
    examples.*
    tests
    tests.*

[flake8]
ignore = E501, W503, E402
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
enable-extensions = G
extend-ignore =
    G001, G002, G004, G200, G201, G202,
    # black adds spaces around ':'
    E203,
per-file-ignores =
    # B011: Do not call assert False since python -O removes these calls
    # F841 local variable 'foo' is assigned to but never used
    tests/*: B011, F841
