[metadata]
author = Jupyter Development Team
author-email = jupyter@googlegroups.com
summary = Pytest fixtures for Jupyter Server
description-file = README.md
long-description-content-type = text/markdown
home-page = https://github.com/jupyter/jupyter_server
license = BSD-3-Clause
license-file = COPYING.md
python-requires = >=3.6
classifier =
    Framework :: Jupyter
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
keywords =
    testing

install_requires =
    jupyter_server
    pytest
    pytest_tornasync

[options]
py_modules =
    pytest_jupyter_server

[options.entry_points]
pytest11 =
    pytest_jupyter_server = pytest_jupyter_server
