[metadata]
name = client_eventlog_example
version = attr: client_eventlog_example.__version__
description = a dummy module for testing client telemetry eventlog entrypoint
long_description = file: README.md
long_description_content_type = text/markdown
url = https://jupyter.org
author = Jupyter Development Team
author_email = jupyter@googlegroups.org
license = BSD
license_file = COPYING.md
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python

zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6

[options.entry_points]
jupyter_telemetry =
    example-client-eventlog-entry-point = client_eventlog_example:JUPYTER_TELEMETRY_SCHEMAS
